[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 1022.0
margin_bottom = 603.0
script = ExtResource( 1 )

[node name="start" type="Button" parent="Control"]
margin_left = 371.0
margin_top = 137.0
margin_right = 649.0
margin_bottom = 218.0
text = "Start"

[node name="instr" type="Button" parent="Control"]
margin_left = 371.0
margin_top = 261.0
margin_right = 649.0
margin_bottom = 342.0
text = "How to play"

[node name="exit" type="Button" parent="Control"]
margin_left = 371.0
margin_top = 385.0
margin_right = 649.0
margin_bottom = 466.0
text = "Exit"

[connection signal="pressed" from="Control/start" to="Control" method="_on_start_pressed"]
[connection signal="pressed" from="Control/instr" to="Control" method="_on_instr_pressed"]
[connection signal="pressed" from="Control/exit" to="Control" method="_on_exit_pressed"]
