extends Control

# Called when the node enters the scene tree for the first time.
func _ready():
	pass
	#get_tree().change_scene("")

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_start_pressed():
	pass # Replace with function body.


func _on_instr_pressed():
	pass # Replace with function body.


func _on_exit_pressed():
	pass # Replace with function body.
